force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Donor_s_PRM_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_s_PRM_Formula__c</fullName>
    <description>Constituent or Organizations PRM for Pledge Receivables Report</description>
    <formula>IF ( ISBLANK( ucinn_ascendv2__Contact__c ),  Account.ucinn_ascendv2__PRM__c ,  ucinn_ascendv2__Contact__r.ucinn_ascendv2__PRM__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor&apos;s PRM</label>
    <type>Text</type>
</CustomField>