force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date__c</fullName>
    <description>End date for Recurring Gifts</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>