force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Exclude_Trustee_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Exclude_Trustee_Soft_Credit__c</fullName>
    <description>For Daily Contribution Report, populated for non-trustee</description>
    <label>Exclude Trustee Soft Credit</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>