force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Faculty_Research_Endowment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Faculty_Research_Endowment__c</fullName>
    <label>Faculty / Research Endowment %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>