force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Funded_Amount__c</fullName>
    <description>Used only for Proposal</description>
    <label>Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>