force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Installments_in_External_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Installments_in_External_Payment_Gateway__c</fullName>
    <label>Installments in External Payment Gateway</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>