force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Is_Gift_Receipt_Required__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Gift_Receipt_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gift Receipt Required</label>
    <type>Checkbox</type>
</CustomField>