force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Is_Trustee__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trustee</label>
    <type>Checkbox</type>
</CustomField>