force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Latest_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Latest_Installment_Date__c</fullName>
    <label>Latest Installment Date</label>
    <type>Date</type>
</CustomField>