force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Matched_Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matched_Payment_Group__c</fullName>
    <label>Matched Payment Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>