force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Matching_Challenge__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that will be paid off once this challenge is met</description>
    <inlineHelpText>Opportunity that will be paid off once this challenge is met</inlineHelpText>
    <label>Matching Challenge</label>
    <referenceTo>ucinn_ascendv2__Matching_Challenge__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Matching_Challenge</relationshipName>
    <type>Lookup</type>
</CustomField>