force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Matching_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Source__c</fullName>
    <label>Matching Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>