force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Naming_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Naming_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Naming Opportunity</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Pledges / Gifts (Naming Opportunity)</relationshipLabel>
    <relationshipName>Opportunities_Naming_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>