force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__NPV_Rate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__NPV_Rate__c</fullName>
    <description>Rate that defaults based on the the NPV custom setting for pledges</description>
    <label>NPV Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>