force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Number_of_Pledges_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Pledges_Roll_Up__c</fullName>
    <label>Number of Pledges</label>
    <summaryForeignKey>ucinn_ascendv2__Designation_Detail__c.ucinn_ascendv2__Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>