force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Number_of_Unpaid_Installment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Unpaid_Installment__c</fullName>
    <label>Number of Unpaid Installment</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>