force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Original_Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Original_Proposal_ID__c</fullName>
    <label>Original Proposal ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>