force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Gift_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Gift_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate Pledge/Gift Opportunities to Constituent for displaying related list in mobile</description>
    <label>Pledge / Gift Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pledges / Gifts (Constituent)</relationshipLabel>
    <relationshipName>Opportunities_Pledge_Gift_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>