force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Pledge_Reminder_Owner__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Reminder_Owner__c</fullName>
    <description>Responsible for sending the pledge reminder</description>
    <inlineHelpText>Responsible for sending the pledge reminder</inlineHelpText>
    <label>Pledge Reminder Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stewardship Team</fullName>
                <default>true</default>
                <label>Stewardship Team</label>
            </value>
            <value>
                <fullName>Gift Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>