force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Post_to_G_L_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Post_to_G_L_Date__c</fullName>
    <label>Post to G / L Date</label>
    <type>Date</type>
</CustomField>