force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Proposal_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Opportunities_Proposal_Account</relationshipName>
    <type>Lookup</type>
</CustomField>