force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Proposed_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposed_Designation__c</fullName>
    <label>Proposed Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>