force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Responsible_Person</relationshipName>
    <type>Lookup</type>
</CustomField>