force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Review_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Review Transaction to the Pledge</description>
    <label>Review Transaction</label>
    <referenceTo>ucinn_ascendv2__Review_Transaction__c</referenceTo>
    <relationshipLabel>Pledges / Gifts (Review Transaction)</relationshipLabel>
    <relationshipName>Opportunities_Review_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>