force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__SEC_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SEC_Code__c</fullName>
    <description>Code denoting the method of authorization used for a transaction.</description>
    <inlineHelpText>Code denoting the method of authorization used for a transaction.</inlineHelpText>
    <label>SEC Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>CBR</fullName>
            </value>
            <value>
                <fullName>CCD</fullName>
            </value>
            <value>
                <fullName>CIE</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>CTX</fullName>
            </value>
            <value>
                <fullName>MTE</fullName>
            </value>
            <value>
                <fullName>PBR</fullName>
            </value>
            <value>
                <fullName>POP</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>RCK</fullName>
            </value>
            <value>
                <fullName>TEL</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>