force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Send_Pledge_Reminder__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Send_Pledge_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Pledge Reminder</label>
    <type>Checkbox</type>
</CustomField>