force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Send_to_G_L__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Send_to_G_L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to G / L</label>
    <type>Checkbox</type>
</CustomField>