force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>ucinn_ascendv2__Session__c</referenceTo>
    <relationshipLabel>Pledges / Gifts (Session)</relationshipLabel>
    <relationshipName>Opportunities_Session</relationshipName>
    <type>Lookup</type>
</CustomField>