force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Session_Approval_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Approval_Date_Formula__c</fullName>
    <formula>ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Totals_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Approval Date</label>
    <type>Date</type>
</CustomField>