force-app/main/default/objects/Opportunity/fields/ucinn_ascendv2__Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Soft_Credit__c</fullName>
    <description>Soft Credit&apos;s Full name + Doner Id list seperated by ;</description>
    <label>Soft Credit</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>